2010-08-06  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        texture functions should gen INVALID_OPERATION if no texture is bound
        https://bugs.webkit.org/show_bug.cgi?id=42907

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::copyTexImage2D): Check if a texture is bound to target.
        (WebCore::WebGLRenderingContext::copyTexSubImage2D): Ditto.
        (WebCore::WebGLRenderingContext::generateMipmap): Ditto.
        (WebCore::WebGLRenderingContext::getTexParameter): Ditto.
        (WebCore::WebGLRenderingContext::texImage2DBase): Ditto.
        (WebCore::WebGLRenderingContext::texParameter): Ditto.
        (WebCore::WebGLRenderingContext::texSubImage2DBase): Ditto.
        (WebCore::WebGLRenderingContext::validateTextureBinding): Check if target is valid and if a texture is bound to it.
        * html/canvas/WebGLRenderingContext.h: Declare validateTextureBinding().
2010-08-06  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        texture functions should gen INVALID_OPERATION if no texture is bound
        https://bugs.webkit.org/show_bug.cgi?id=42907

        * fast/canvas/webgl/gl-enum-tests-expected.txt: Need to bind a texture before testing tex-functions.
        * fast/canvas/webgl/gl-enum-tests.html: Ditto.
        * fast/canvas/webgl/null-object-behaviour-expected.txt: Test tex-functions when no texture is bound.
        * fast/canvas/webgl/null-object-behaviour.html: Ditto.


Canonical link: https://commits.webkit.org/55891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65089 268f45cc-cd09-0410-ab3c-d52691b4dbfc