WebCore/html/canvas/WebGLRenderingContext.cpp
@@ -521,6 +521,9 @@ void WebGLRenderingContext::copyTexImage2D(unsigned long target, long level, uns
 {
     if (!validateTexFuncParameters(target, level, internalformat, width, height, border, internalformat, GraphicsContext3D::UNSIGNED_BYTE))
         return;
+    WebGLTexture* tex = validateTextureBinding(target, true);
+    if (!tex)
+        return;
     if (!isGLES2Compliant()) {
         if (m_framebufferBinding && m_framebufferBinding->object()
             && !isTexInternalFormatColorBufferCombinationValid(internalformat,
@@ -535,21 +538,20 @@ void WebGLRenderingContext::copyTexImage2D(unsigned long target, long level, uns
     }
     m_context->copyTexImage2D(target, level, internalformat, x, y, width, height, border);
     // FIXME: if the framebuffer is not complete, none of the below should be executed.
-    WebGLTexture* tex = getTextureBinding(target);
-    if (!isGLES2Compliant()) {
-        if (tex)
-            tex->setLevelInfo(target, level, internalformat, width, height, GraphicsContext3D::UNSIGNED_BYTE);
-    }
-    if (m_framebufferBinding && tex)
+    if (!isGLES2Compliant())
+        tex->setLevelInfo(target, level, internalformat, width, height, GraphicsContext3D::UNSIGNED_BYTE);
+    if (m_framebufferBinding)
         m_framebufferBinding->onAttachedObjectChange(tex);
     cleanupAfterGraphicsCall(false);
 }
 
 void WebGLRenderingContext::copyTexSubImage2D(unsigned long target, long level, long xoffset, long yoffset, long x, long y, unsigned long width, unsigned long height)
 {
+    WebGLTexture* tex = validateTextureBinding(target, true);
+    if (!tex)
+        return;
     if (!isGLES2Compliant()) {
-        WebGLTexture* tex = getTextureBinding(target);
-        if (m_framebufferBinding && m_framebufferBinding->object() && tex
+        if (m_framebufferBinding && m_framebufferBinding->object()
             && !isTexInternalFormatColorBufferCombinationValid(tex->getInternalFormat(),
                                                                m_framebufferBinding->getColorBufferFormat())) {
             m_context->synthesizeGLError(GraphicsContext3D::INVALID_OPERATION);
@@ -1110,22 +1112,18 @@ void WebGLRenderingContext::frontFace(unsigned long mode)
 
 void WebGLRenderingContext::generateMipmap(unsigned long target)
 {
-    RefPtr<WebGLTexture> tex;
+    WebGLTexture* tex = validateTextureBinding(target, false);
+    if (!tex)
+        return;
     if (!isGLES2Compliant()) {
-        if (target == GraphicsContext3D::TEXTURE_2D)
-            tex = m_textureUnits[m_activeTextureUnit].m_texture2DBinding;
-        else if (target == GraphicsContext3D::TEXTURE_CUBE_MAP)
-            tex = m_textureUnits[m_activeTextureUnit].m_textureCubeMapBinding;
-        if (tex && !tex->canGenerateMipmaps()) {
+        if (!tex->canGenerateMipmaps()) {
             m_context->synthesizeGLError(GraphicsContext3D::INVALID_OPERATION);
             return;
         }
     }
     m_context->generateMipmap(target);
-    if (!isGLES2Compliant()) {
-        if (tex)
-            tex->generateMipmapLevelInfo();
-    }
+    if (!isGLES2Compliant())
+        tex->generateMipmapLevelInfo();
     cleanupAfterGraphicsCall(false);
 }
 
@@ -1574,11 +1572,9 @@ String WebGLRenderingContext::getString(unsigned long name)
 WebGLGetInfo WebGLRenderingContext::getTexParameter(unsigned long target, unsigned long pname, ExceptionCode& ec)
 {
     UNUSED_PARAM(ec);
-    if (target != GraphicsContext3D::TEXTURE_2D
-        && target != GraphicsContext3D::TEXTURE_CUBE_MAP) {
-        m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
+    WebGLTexture* tex = validateTextureBinding(target, false);
+    if (!tex)
         return WebGLGetInfo();
-    }
     WebGLStateRestorer(this, false);
     int value = 0;
     switch (pname) {
@@ -2100,6 +2096,9 @@ void WebGLRenderingContext::texImage2DBase(unsigned target, unsigned level, unsi
     ec = 0;
     if (!validateTexFuncParameters(target, level, internalformat, width, height, border, format, type))
         return;
+    WebGLTexture* tex = validateTextureBinding(target, true);
+    if (!tex)
+        return;
     if (!isGLES2Compliant()) {
         if (level && WebGLTexture::isNPOT(width, height)) {
             m_context->synthesizeGLError(GraphicsContext3D::INVALID_VALUE);
@@ -2108,12 +2107,9 @@ void WebGLRenderingContext::texImage2DBase(unsigned target, unsigned level, unsi
     }
     m_context->texImage2D(target, level, internalformat, width, height,
                           border, format, type, pixels);
-    WebGLTexture* tex = getTextureBinding(target);
-    if (!isGLES2Compliant()) {
-        if (tex)
-            tex->setLevelInfo(target, level, internalformat, width, height, type);
-    }
-    if (m_framebufferBinding && tex)
+    if (!isGLES2Compliant())
+        tex->setLevelInfo(target, level, internalformat, width, height, type);
+    if (m_framebufferBinding)
         m_framebufferBinding->onAttachedObjectChange(tex);
     cleanupAfterGraphicsCall(false);
 }
@@ -2330,19 +2326,10 @@ void WebGLRenderingContext::texImage2D(unsigned target, unsigned level, HTMLVide
 
 void WebGLRenderingContext::texParameter(unsigned long target, unsigned long pname, float paramf, int parami, bool isFloat)
 {
+    WebGLTexture* tex = validateTextureBinding(target, false);
+    if (!tex)
+        return;
     if (!isGLES2Compliant()) {
-        RefPtr<WebGLTexture> tex = 0;
-        switch (target) {
-        case GraphicsContext3D::TEXTURE_2D:
-            tex = m_textureUnits[m_activeTextureUnit].m_texture2DBinding;
-            break;
-        case GraphicsContext3D::TEXTURE_CUBE_MAP:
-            tex = m_textureUnits[m_activeTextureUnit].m_textureCubeMapBinding;
-            break;
-        default:
-            m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
-            return;
-        }
         switch (pname) {
         case GraphicsContext3D::TEXTURE_MIN_FILTER:
         case GraphicsContext3D::TEXTURE_MAG_FILTER:
@@ -2359,12 +2346,10 @@ void WebGLRenderingContext::texParameter(unsigned long target, unsigned long pna
             m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
             return;
         }
-        if (tex) {
-            if (isFloat)
-                tex->setParameterf(pname, paramf);
-            else
-                tex->setParameteri(pname, parami);
-        }
+        if (isFloat)
+            tex->setParameterf(pname, paramf);
+        else
+            tex->setParameteri(pname, parami);
     }
     if (isFloat)
         m_context->texParameterf(target, pname, paramf);
@@ -2391,7 +2376,8 @@ void WebGLRenderingContext::texSubImage2DBase(unsigned target, unsigned level, u
     ec = 0;
     if (!validateTexFuncFormatAndType(format, type))
         return;
-
+    if (!validateTextureBinding(target, true))
+        return;
     m_context->texSubImage2D(target, level, xoffset, yoffset, width, height, format, type, pixels);
     cleanupAfterGraphicsCall(false);
 }
@@ -3309,12 +3295,12 @@ bool WebGLRenderingContext::isTexInternalFormatColorBufferCombinationValid(unsig
     return false;
 }
 
-WebGLTexture* WebGLRenderingContext::getTextureBinding(unsigned long target)
+WebGLTexture* WebGLRenderingContext::validateTextureBinding(unsigned long target, bool useSixEnumsForCubeMap)
 {
-    RefPtr<WebGLTexture> tex = 0;
+    WebGLTexture* tex = 0;
     switch (target) {
     case GraphicsContext3D::TEXTURE_2D:
-        tex = m_textureUnits[m_activeTextureUnit].m_texture2DBinding;
+        tex = m_textureUnits[m_activeTextureUnit].m_texture2DBinding.get();
         break;
     case GraphicsContext3D::TEXTURE_CUBE_MAP_POSITIVE_X:
     case GraphicsContext3D::TEXTURE_CUBE_MAP_NEGATIVE_X:
@@ -3322,12 +3308,26 @@ WebGLTexture* WebGLRenderingContext::getTextureBinding(unsigned long target)
     case GraphicsContext3D::TEXTURE_CUBE_MAP_NEGATIVE_Y:
     case GraphicsContext3D::TEXTURE_CUBE_MAP_POSITIVE_Z:
     case GraphicsContext3D::TEXTURE_CUBE_MAP_NEGATIVE_Z:
-        tex = m_textureUnits[m_activeTextureUnit].m_textureCubeMapBinding;
+        if (!useSixEnumsForCubeMap) {
+            m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
+            return 0;
+        }
+        tex = m_textureUnits[m_activeTextureUnit].m_textureCubeMapBinding.get();
         break;
+    case GraphicsContext3D::TEXTURE_CUBE_MAP:
+        if (useSixEnumsForCubeMap) {
+            m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
+            return 0;
+        }
+        tex = m_textureUnits[m_activeTextureUnit].m_textureCubeMapBinding.get();
+        break;
+    default:
+        m_context->synthesizeGLError(GraphicsContext3D::INVALID_ENUM);
+        return 0;
     }
-    if (tex && tex->object())
-        return tex.get();
-    return 0;
+    if (!tex)
+        m_context->synthesizeGLError(GraphicsContext3D::INVALID_OPERATION);
+    return tex;
 }
 
 bool WebGLRenderingContext::validateTexFuncFormatAndType(unsigned long format, unsigned long type)
